added tests for operation method